syntax = "proto3";

package signaling;

message JoinRequest {
  string conference_id = 1;
  string user_id = 2;
  string nickname = 3;
}

message SDP {
  string session_id = 1;
  string type = 2; // "offer" or "answer"
  string sdp = 3;
}

message IceCandidate {
  string session_id = 1;
  string candidate = 2;
  string sdp_mid = 3;
  int32 sdp_mline_index = 4;
}

message StateUpdate {
  string participant_id = 1;
  optional bool muted = 2;
  optional bool video_on = 3;
  optional bool screen_sharing = 4;
}

message SignalMessage {
  oneof payload {
    JoinRequest join = 1;
    SDP sdp = 2;
    IceCandidate candidate = 3;
    StateUpdate state = 4;
  }
}

service SignalingService {
  rpc SendSignal (stream SignalMessage) returns (stream SignalMessage);
}